src/test/compile-fail/writing-to-immutable-obj.rs
// error-pattern:assigning to immutable object field
obj objy(x: int) {
    fn foo() { x = 5; }
}
fn main() { }
